[tool.poetry]
authors = ["Patrick Arminio <patrick.arminio@gmail.com>"]
description = ""
license = "MIT"
name = "strawberry-workshop"
version = "0.1.0"

[tool.poetry.dependencies]
Django = "^4.0.6"
Pillow = "^9.2.0"
ddtrace = "^1.2.2"
django-cursor-pagination = "^0.2.0"
podcastparser = "^0.6.8"
pytest = "^7.1.2"
pytest-django = "^4.5.2"
python = "^3.10"
rich = "^12.4.4"
strawberry-graphql = "^0.117.1"
typer = "^0.4.2"

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
  "mypy<1.0,>=0.961",
  "flake8<5.0.0,>=4.0.1",
  "black<23.0.0,>=22.6.0",
  "pdbpp<1.0.0,>=0.10.3",
  "django-extensions<4.0.0,>=3.1.5",
  "Werkzeug==2.0.3",
  "pytest-asyncio<1.0.0,>=0.18.3",
]

[tool.pdm.build]
includes = []
distribution = true
[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88

[tool.isort]
combine_as_imports = true
combine_star = true
indent = 4
known_django = ["django"]
known_pytest = ["pytest"]
known_strawberry = ["strawberry"]
lines_after_imports = 2
profile = "black"
sections = ["FUTURE", "STDLIB", "PYTEST", "THIRDPARTY", "DJANGO", "STRAWBERRY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "podcast.settings"
addopts = "-s"
testpaths = ["tests/"]

[tool.mypy]
plugins = ["strawberry.ext.mypy_plugin"]

[tool.pdm.scripts]
dev = "python manage.py runserver_plus --print-sql"
import-feeds = {composite = [
  "python cli.py import-feeds https://talkpython.fm/episodes/rss",
  "python cli.py import-feeds https://realpython.com/podcasts/rpp/feed",
  "python cli.py import-feeds https://pythonbytes.fm/episodes/rss",
]}
migrate = "python manage.py migrate"
start = "gunicorn -b 0.0.0.0:8000 podcast.asgi:application -k uvicorn.workers.UvicornWorker"
test = "pytest"

[project]
# PEP 621 project metadata
# See https://www.python.org/dev/peps/pep-0621/
authors = [
    {name = "Patrick Arminio", email = "patrick.arminio@gmail.com"},
    {name = "Brian Njuguna", email = "brian@ibuqacapital.com"},
]
dependencies = [
    "Django<5.0.0,>=4.0.6",
    "typer<1.0.0,>=0.4.2",
    "podcastparser<1.0.0,>=0.6.8",
    "rich<13.0.0,>=12.4.4",
    "Pillow<10.0.0,>=9.2.0",
    "pytest<8.0.0,>=7.1.2",
    "pytest-django<5.0.0,>=4.5.2",
    "django-cursor-pagination<1.0.0,>=0.2.0",
    "ddtrace<2.0.0,>=1.2.2",
    "strawberry-graphql<1.0.0,>=0.117.1",
    "django-extensions>=3.2.1",
    "gunicorn>=20.1.0",
    "uvicorn>=0.21.1",
    "dj-database-url>=1.3.0",
    "psycopg2-binary>=2.9.6",
    "asgiref==3.6.0",
    "attrs==23.1.0",
    "black==22.12.0",
    "bytecode==0.14.1",
    "cattrs==22.2.0",
    "click==8.1.3",
    "commonmark==0.9.1",
    "ddsketch==2.0.4",
    "ddtrace==1.12.0",
    "deprecated==1.2.13",
    "dj-database-url==1.3.0",
    "Django==4.2",
    "django-cursor-pagination==0.2.1",
    "django-extensions==3.2.1",
    "envier==0.4.0",
    "exceptiongroup==1.1.1",
    "fancycompleter==0.9.1",
    "flake8==4.0.1",
    "graphql-core==3.2.3",
    "gunicorn==20.1.0",
    "h11==0.14.0",
    "importlib-metadata==6.0.1",
    "iniconfig==2.0.0",
    "jsonschema==4.17.3",
    "mccabe==0.6.1",
    "mypy==0.991",
    "mypy-extensions==1.0.0",
    "opentelemetry-api==1.17.0",
    "packaging==23.1",
    "pathspec==0.11.1",
    "pdbpp==0.10.3",
    "Pillow==9.5.0",
    "platformdirs==3.2.0",
    "pluggy==1.0.0",
    "podcastparser==0.6.10",
    "protobuf==4.22.3",
    "psycopg2-binary==2.9.6",
    "pycodestyle==2.8.0",
    "pyflakes==2.4.0",
    "pygments==2.15.1",
    "pyrepl==0.9.0",
    "pyrsistent==0.19.3",
    "pytest==7.3.1",
    "pytest-asyncio==0.21.0",
    "pytest-django==4.5.2",
    "python-dateutil==2.8.2",
    "rich==12.6.0",
    "setuptools==67.6.1",
    "six==1.16.0",
    "sqlparse==0.4.4",
    "strawberry-graphql==0.171.1",
    "tenacity==8.2.2",
    "tomli==2.0.1",
    "typer==0.7.0",
    "typing-extensions==4.5.0",
    "uvicorn==0.21.1",
    "Werkzeug==2.0.3",
    "wmctrl==0.4",
    "wrapt==1.15.0",
    "xmltodict==0.13.0",
    "zipp==3.15.0",
]
description = "Default template for PDM package"
license = {text = "MIT"}
name = "strawberry-workshop"
requires-python = ">=3.12"
version = "0.1.0"
readme = "README.md"

[tool.ruff]
select = [
  "E",
  "F",
]
